--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@ a {
   text-decoration: none;
   color: var(--text-color);
 }
+button{
+    cursor: pointer;
+}
 .wrapper {
   background-color: #fff;
   max-width: 1600px;
@@ -228,8 +231,8 @@ a {
   color: #121212;
 }
 .partner__link-img {
-  margin: 2rem;
-  padding: 3rem 3.5rem;
+  padding: 3rem 5rem;
+  cursor: pointer;
 }
 
 .end {
@@ -425,7 +428,6 @@ a {
   color: var(--text-color1);
   letter-spacing: 0.015em;
   opacity: 0.4;
-
 }
 hr {
   background: #121212;
